# c-prediction

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/exchanges/: base.py  ccxt_adapter.py  factory.py  types.py
backend/app/ingestion/: backfill.py  bootstrap.py  validation.py
backend/app/market/: universe.py
backend/app/models/: __init__.py  market.py
backend/app/services/: candles.py  data_quality.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_core.py
docs/: bootstrap.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/api/: client.ts
frontend/src/pages/: AssetPage.test.tsx  AssetPage.tsx  Dashboard.test.tsx  Dashboard.tsx
frontend/src/types/: api.ts
infrastructure/nginx/: README.md  cryptopilot.conf
scripts/: deploy.sh
